Update DescriptionVersionsProvidersTest to not use Guava in test code
Without this change, the test code which is also zipped and used in the
tests does not depend anymore on Guava and that should allow to merge
https://github.com/eclipse/windowbuilder/pull/250